# ogs_chat

./: .gitignore  Cargo.toml  README.md
logger/: Cargo.toml
logger/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  state.rs
